# etr

./: .clauderc  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTES.md  PROTOCOL.md  README.md  SECURITY.md  build.rs  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
benches/: session_bench.rs
man/: etr.1.md  etrs.1.md
scripts/: reset_wip.py
scripts/stress/: tcp_echo.py  tcp_pump.py  udp_concurrent_senders.py  udp_echo.py  udp_pump.py
src/: config.rs  crypto.rs  forward.rs  handshake.rs  lib.rs  login.rs  protocol.rs  quic.rs  session.rs  transport.rs
src/crypto/: aead.rs  kdf.rs  kyber.rs  mod.rs  x25519.rs
src/protocol/: mod.rs
src/session/: mod.rs  stream.rs
tools/stress/: Cargo.toml
tools/stress/src/: main.rs
