[package]
name = "etr"
version = "0.2.0"
edition = "2024"
description = "A Rust implementation of Eternal Terminal (et)"
license = "GPL-3.0-only"
repository = "https://github.com/l1a/etr"

[features]
default = []
pqc = ["dep:ml-kem"]

[dependencies]
futures = "0.3"
tokio = { version = "1.38", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "0.1"
portable-pty = "0.9"
prost = "0.13"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
sha3 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ml-kem = { version = "0.3", optional = true }
rand = "0.8"
rand_core = "0.6"
crossterm = "0.27"
nix = { version = "0.29", features = ["fs", "term", "process", "signal"] }
